--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -9,12 +9,6 @@ servers:
   web:
     hosts:
       - 89.116.73.110
-    labels:
-      traefik.http.routers.blog_maino.rule: Host(`devaleixo.com:82`)
-      traefik.http.routers.blog_maino.entrypoints: websecure
-      traefik.http.routers.blog_maino_secure.rule: Host(`devaleixo.com:82`)
-      traefik.http.routers.blog_maino_secure.tls: true
-      traefik.http.routers.blog_maino_secure.tls.certresolver: letsencrypt
     options:
       network: "private"
 
@@ -33,23 +27,6 @@ registry:
   password:
     - KAMAL_REGISTRY_PASSWORD
 
-traefik:
-  options:
-    publish:
-      - "9443:9443"
-    volume:
-      - "/letsencrypt/acme.json:/letsencrypt/acme.json"
-    network: "private"
-  args:
-    entryPoints.web.address: ":82"
-    entryPoints.websecure.address: ":9443"
-    entryPoints.web.http.redirections.entryPoint.to: websecure
-    entryPoints.web.http.redirections.entryPoint.scheme: https
-    entryPoints.web.http.redirections.entrypoint.permanent: true
-    certificatesResolvers.letsencrypt.acme.email: "info@devaleixo.com:82"
-    certificatesResolvers.letsencrypt.acme.storage: "/letsencrypt/acme.json"
-    certificatesResolvers.letsencrypt.acme.httpchallenge: true
-    certificatesResolvers.letsencrypt.acme.httpchallenge.entrypoint: web
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
   clear:
@@ -120,8 +97,8 @@ ssh:
 # Use accessory services (secrets come from .kamal/secrets).
 accessories:
   db:
-    image: postgres:16.0
-    host: 123.123.45.678
+    image: postgres
+    host: 89.116.73.110
     env:
       clear:
         POSTGRES_USER: "blog_maino"
@@ -141,3 +118,4 @@ accessories:
 #     port: 6379
 #     directories:
 #       - data:/data
+asset_path: /rails/public/assets
