--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -18,7 +18,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: devaleixo.com:82
+  host: blog.devaleixo.com
 
 # Credentials for your image host.
 registry:
